# src/main/resources/openAPI/user.yml
@@ -20,7 +20,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/UserRegistrationResponse'
+                $ref: '#/components/schemas/UserResponse'
         '401':
           description: Fields were entered wrong
 
@@ -54,7 +54,7 @@ components:
           format: uuid
           example: "123e4567-e89b-12d3-a456-426614174000"
 
-    UserRegistrationResponse:
+    UserResponse:
       type: object
       required:
         - id
